View Issue Details

IDProjectCategoryView StatusLast Update
0033656Open CASCADEOCCT:Foundation Classespublic2024-04-01 16:33
Reporterdpasukhi Assigned Todpasukhi  
PrioritynormalSeveritycrash 
Status feedbackResolutionopen 
Target Version7.8.1 
Summary0033656: Foundation Classes - Standard_Type crash during unloading static lib
DescriptionAfter reorganization of Standard_Type as a part of 7.8.0 there is a problem with releasing type_info objects.
Needs to prepare maintance patch to avoid crash.
Minor release will include full reorginization of Standard_Type to avoid using mutex mappint iteration
TagsNo tags attached.
Test case number

Relationships

related to 0033646 newdpasukhi Coding - Performance analyzing of OCCT RTTI 

Activities

git

2024-04-01 01:04

administrator   ~0115523

Branch CR33656 has been created by dpasukhi.

SHA-1: bbf2bbd7a56a0b9f8a3c39766b99d6e3099f03ca


Detailed log of new commits:

Author: dpasukhi
Date: Sun Mar 31 23:02:43 2024 +0100

    0033656: Foundation Classes - Standard_Type crash during unloading static lib
    
    Revert changes to use type_info as a key to use string.
    Impact - performance decrease to search (once per class registration)
    Will be updated with reorganizing type storage in future

dpasukhi

2024-04-01 01:47

administrator   ~0115524

the changes only for maintance release.
develop will have 0033646

Issue History

Date Modified Username Field Change
2024-03-28 13:03 dpasukhi New Issue
2024-03-28 13:03 dpasukhi Assigned To => dpasukhi
2024-03-28 13:03 dpasukhi Relationship added related to 0033646
2024-04-01 01:04 git Note Added: 0115523
2024-04-01 01:47 dpasukhi Note Added: 0115524
2024-04-01 16:33 dpasukhi Status new => feedback