0033656: Foundation Classes - Standard_Type crash during unloading static lib

Revert changes to use type_info as a key to use string.
Impact - performance decrease to search (once per class registration)
Will be updated with reorganizing type storage in future